--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/pyodide@0.21.1/pyodide.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f6f9;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #e9ecef;
             margin: 0;
             padding: 0;
             display: flex;
@@ -18,47 +18,57 @@
         }
         .container {
             background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
             width: 100%;
-            max-width: 500px;
+            max-width: 550px;
+            box-sizing: border-box;
         }
         h1 {
             text-align: center;
-            font-size: 20px;
-            color: #333;
+            font-size: 24px;
+            color: #2d3748;
+            margin-bottom: 20px;
         }
         textarea, input[type="text"] {
             width: 100%;
-            padding: 10px;
-            font-size: 16px;
+            padding: 14px;
+            font-size: 18px;
             margin-top: 10px;
             margin-bottom: 20px;
-            border-radius: 5px;
+            border-radius: 8px;
             border: 1px solid #ddd;
-            resize: vertical;
+            box-sizing: border-box;
+            transition: border-color 0.3s ease;
+        }
+        textarea:focus, input[type="text"]:focus {
+            border-color: #4CAF50;
+            outline: none;
         }
         button {
             width: 100%;
-            padding: 12px;
-            font-size: 16px;
+            padding: 14px;
+            font-size: 18px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         button:hover {
             background-color: #45a049;
         }
         #highlighted-text {
-            font-size: 16px;
-            color: #333;
+            font-size: 18px;
+            color: #2d3748;
+            margin-top: 20px;
         }
         mark {
-            background-color: yellow;
-            color: black;
+            background-color: #f2d600;
+            color: #333;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -92,3 +102,4 @@ highlighted_text
     </script>
 </body>
 </html>
+
