--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #e9ecef;
+            background-color: #f5f3e5; 
             margin: 0;
             padding: 0;
             display: flex;
@@ -43,14 +43,14 @@
             transition: border-color 0.3s ease;
         }
         textarea:focus, input[type="text"]:focus {
-            border-color: #4CAF50;
+            border-color: #007BFF; 
             outline: none;
         }
         button {
             width: 100%;
             padding: 14px;
             font-size: 18px;
-            background-color: #4CAF50;
+            background-color: #007BFF; 
             color: white;
             border: none;
             border-radius: 8px;
@@ -58,7 +58,7 @@
             transition: background-color 0.3s ease;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #0056b3; 
         }
         #highlighted-text {
             font-size: 18px;
@@ -102,4 +102,5 @@ highlighted_text
     </script>
 </body>
 </html>
+
 
